--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap");
+body {
+  box-sizing: border-box;
+  margin: auto;
+  font-family: "Quicksand", sans-serif;
+}
+.main-div {
+  margin: auto;
+  color: darkorange;
+  padding: 5px;
+}
+
+.header {
+  text-shadow: 2px 2px 5px red;
+  padding: 12px;
+  font-size: 20px;
+  list-style: none;
+  height: 40px;
+  /* background-color: orangered; */
+  box-shadow: 10px 15px 30px rgba(0, 0, 0, 0.2);
+}
+
+.main-div h1,
+h2 {
   text-align: center;
+  margin: auto;
+  padding: 15px;
+  font-size: 30px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main-div h1 {
+  font-size: 150px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media only screen and (min-width: 600px) {
+  .example {
+    background: white;
   }
 }
